echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
