gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: company-gateway
  namespace: assignment

spec:
  gatewayClassName: envoy

  listeners:

  - name: https
    hostname: "*.company.local"
    protocol: HTTPS
    port: 443

    tls:
      mode: Terminate
      certificateRefs:
        - name: gateway-tls-secret

    allowedRoutes:
      namespaces:
        from: Same
